--- a/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
@@ -5,56 +5,67 @@
              Title="Profile"
              Style="{StaticResource TypicalContentPage}">
 
-  <!--<StackLayout>
-    <Button x:Name="btn_hiragana_achivements"
-            Text="View Hiragana Achivements" />
-    <Button x:Name="btn_katakana_achivements"
-            Text="View Katakana Achivements" />
-    <Button x:Name="btn_vocabulary_achivements"
-            Text="View Vocabulary Achivements" />
-    <Button x:Name="btn_delete_data"
-            Text="Delete User Data" />
-  </StackLayout>-->
+  <StackLayout>
 
-  <Grid>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="1*" />
-    </Grid.ColumnDefinitions>
+    <Grid VerticalOptions="StartAndExpand">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
 
-    <Grid.RowDefinitions>
-      <RowDefinition Height="1*" />
-    </Grid.RowDefinitions>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
 
-    <Button x:Name="btn_hiragana_achivements"
-            Text="View Hiragana Achievement"
-            Grid.Row="0"/>
-    <Button x:Name="btn_katakana_achivements"
-            Text="View Katakana Achievement"
-            Grid.Row="1"/>
-    <Button x:Name="btn_vocabulary_achivements"
-            Text="View Vocabulary Achievement"
-            Grid.Row="2"/>
-    <Button x:Name="btn_assess"
-            Text="View Assessment"
-            Grid.Row="3"/>
-    <Button x:Name="btn_delete_data"
-            Text="Delete User Data"
-            Grid.Row="4"/>
-    <StackLayout Grid.Row="5">
+      <Button x:Name="btn_n5"
+                Text="JLPT N5"
+                Grid.Row="0" />
+      <Button x:Name="btn_n4"
+              Text="JLPT N4"
+              Grid.Row="1"/>
+
+      <Button x:Name="btn_delete_data"
+              Text="Delete User Data"
+              Grid.Row="2" />
+
+      <StackLayout Grid.Row="3">
+
+        <ProgressBar x:Name="progress_deletion"
+                     IsVisible="False"
+                     Progress="0"/>
+        <Label x:Name="lbl_prog_percent"
+               IsVisible="False"
+               Text="{Binding Progress, StringFormat='{0:0.00}%', Source={x:Reference progress_deletion}}"
+               HorizontalOptions="Center"
+               VerticalOptions="End"
+               Grid.Row="6"/>
+      </StackLayout>
+    </Grid>
     
-      <ProgressBar x:Name="progress_deletion"
-                   IsVisible="False"
-                   Progress="0"/>
-      <Label x:Name="lbl_prog_percent"
-             IsVisible="False"
-             Text="{Binding Progress, StringFormat='{0:0.00}%', Source={x:Reference progress_deletion}}"
-             HorizontalOptions="Center"
-             VerticalOptions="End"
-             Grid.Row="6"/>
-    </StackLayout>
-    
-    
-    
-  </Grid>
   
+    <StackLayout VerticalOptions="End"
+                 Margin="0,0,0,20">
+      <Image x:Name="image_homepage_header"
+               Source="homepage_header2"
+               Aspect="AspectFill"/>
+      <Grid Margin="0,-70,0,0">
+        <StackLayout>
+          <Frame Padding="0"
+                 BackgroundColor="#85E7E0"
+                 Opacity="0.5">
+            <Label Text=" "
+                   FontSize="Large" />
+          </Frame >
+        </StackLayout>
+        <StackLayout>
+          <Label x:Name="label_homepage_header"
+                 Text="Profile Page"
+                 FontAttributes="Bold"
+                 HorizontalOptions="Center"
+                 FontSize="Large" />
+        </StackLayout>
+      </Grid>
+    </StackLayout>
+
+
+  </StackLayout>
 </ContentPage>
