finally ariel happend to me

--- a/Daijoubu/Daijoubu/App.xaml
+++ b/Daijoubu/Daijoubu/App.xaml
@@ -17,25 +17,25 @@
         <Setter Property="TextColor" Value="#FD6E75" />
         <Setter Property="FontSize" Value="Medium" />
       </Style>
-      
+
       <!-- Default Style For content page to counter the margin -->
       <Style x:Key="TypicalContentPage" TargetType="ContentPage">
         <Setter Property="Padding" Value="50" />
         <Setter Property="BackgroundColor" Value="#85E7E0" />
       </Style>
-      
+
       <Style x:Key="MultipleChoiceButtonStyle" TargetType="Button">
         <Setter Property="Margin" Value="-18" />
         <Setter Property="BackgroundColor" Value="#38B4AB" />
-      <Setter Property="TextColor" Value="#FD6E75" />
+        <Setter Property="TextColor" Value="#FD6E75" />
       </Style>
       <Style x:Key="AnswerButtonFrame" TargetType="Frame">
         <Setter Property="Margin" Value="5" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="BackgroundColor" Value="#38B4AB" />
-        
+
       </Style>
-      
+
       <Style x:Key="QuestionCardOuterFrame" TargetType="Frame">
         <Setter Property="Margin" Value="15,40,15,15" />
         <Setter Property="Padding" Value="0" />
@@ -46,7 +46,7 @@
         <Setter Property="BackgroundColor" Value="#B6F6F1" />
       </Style>
 
-      
+
 
 
       <Style x:Key="DebugLabels" TargetType="Label">
@@ -72,6 +72,44 @@
         <Setter Property="BackgroundColor" Value="#38B4AB" />
         <Setter Property="TextColor" Value="#FD6E75" />
       </Style>
+
+
+
+      <!-- Custom Button with image-->
+      <Style x:Key="CustomButtonStackLayout" TargetType="StackLayout">
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Margin" Value="0,8,0,8" />
+      </Style>
+      <Style x:Key="CustomButtonFrame" TargetType="Frame">
+        <Setter Property="Opacity" Value="0.5" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Margin" Value="0" />
+        <Setter Property="BackgroundColor" Value="#85E7E0" />
+      </Style>
+      <Style x:Key="CustomButtonImage" TargetType="Image">
+        <Setter Property="Aspect" Value="AspectFill" />
+      </Style>
+      <Style x:Key="CustomButtonLabel" TargetType="Label">
+        <Setter Property="TextColor" Value="#FD6E75" />
+        <Setter Property="FontSize" Value="Large" />
+        <Setter Property="HorizontalOptions" Value="Center" />
+        <Setter Property="FontAttributes" Value="Bold" />
+      </Style>
+      <Style x:Key="CustomButtonGrid" TargetType="Grid">
+        <Setter Property="Margin" Value="0,-55,0,0" />
+      </Style>
+      <!--
+      <Style x:Key="CounterMargin2R" TargetType="StackLayout">
+        <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
+        <Setter Property="Margin" Value="10,40,10,-10" />
+      </Style>
+      -->
+
+      <Style x:Key="BottomBannerStackLayout" TargetType="StackLayout">
+        <Setter Property="Margin" Value="0,0,0,15" />
+      </Style>
+
     </ResourceDictionary>
 
   </Application.Resources>
