--- a/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
@@ -7,41 +7,34 @@
   <StackLayout
     Padding="10">
 
- 
-           
-    <Label Text="Daijoubu app © 2016"
-           TextColor="White"/>
+
+
+    <Label Text="Daijoubu app © 2016" />
     <Label Text=" " />
-    
+
     <Label x:Name="label_version_info"
            Text=" " />
-    
+
     <Label Text=" " />
-    <Label Text="Created By:" 
-           TextColor="White"/>
-    <Label Text="     Noli Valdez III" 
+    <Label Text="Created By:" />
+    <Label Text="     Noli Valdez III"
            TextColor="Blue"/>
-    <Label Text="     Mikko Villanueva" 
+    <Label Text="     Mikko Villanueva"
            TextColor="Red"/>
 
     <Label Text=" " />
     <Label Text=" " />
-    
-    <Label Text="Special Thanks:" 
-           TextColor="White"/>
-    <Label Text="     Mary Jane Samonte" 
-           TextColor="White"/>
-    <Label Text="     Mika Kawasaki" 
-           TextColor="White"/>
-    <Label Text="     Nida Maramara"
-           TextColor="White"/>
-    <Label Text="     Gonzalo Gumogda"
-           TextColor="White"/>
+
+    <Label Text="Special Thanks:" />
+    <Label Text="     Mary Jane Samonte"  />
+    <Label Text="     Mika Kawasaki"  />
+    <Label Text="     Nida Maramara" />
+    <Label Text="     Gonzalo Gumogda" />
 
     <Label Text=" " />
     <Label Text=" " />
-    
-    
+
+
   </StackLayout>
 
 
