--- a/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.MultipleChoicePage"
-             Title="Choice Module"
+             Title="Multiple Choice Module"
              x:Name="MultipleChoicePage"
              AutomationId="auto_MultipleChoicePage"
              Style="{StaticResource TypicalContentPage}">
